# rp2040_audioboard

./: .gitignore  .gitmodules  README.md  rp2040_audio_board.code-workspace
firmware/: .clang-format  CMakeLists.txt  Dockerfile  LICENSE
firmware/.devcontainer/: devcontainer.json
firmware/bsp/: rp2040_audio_board.h
firmware/examples/pico_jscope/: CMakeLists.txt  main.c
firmware/examples/pico_rtt/: CMakeLists.txt  main.c
firmware/examples/pico_serialplot/: CMakeLists.txt  main.c
firmware/examples/pico_systemview/: CMakeLists.txt  SEGGER_SYSVIEW_Config_NoOS_CM0.c  main.c
firmware/src/: CMakeLists.txt  main.c
hardware/: adc.kicad_sch  dac.kicad_sch  mcu.kicad_sch  power.kicad_sch  rp2040_audioboard.kicad_pcb  rp2040_audioboard.kicad_prl  rp2040_audioboard.kicad_pro  rp2040_audioboard.kicad_sch
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
